# trialframe

./: .coverage  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
.hypothesis/constants/: 19c03d94585f74ff  4cc81af7b75649e8  986532246b55b4ae  acad59ed8c46d49e  bffd7338f2cdea19  c2f4ae5a96282315  dcaeffccae9e285c  ed6cb0153aecb120
tests/: conftest.py  test_dpca.py  test_hypothesis.py  test_munge.py  test_smoothing.py  test_state_space.py  test_time_slice.py  test_timeseries.py
trialframe/: __init__.py  dpca.py  munge.py  smoothing.py  state_space.py  time_slice.py  timeseries.py
