[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "trialframe"
version = "0.1.0"
description = "A python package to manipulate trialframe format data"
authors = [
    { name = "Raeed Chowdhury" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "xarray",
    "dpca",
    "numexpr",
    "numba",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.setuptools.packages.find]
where = ["."]